# godwoken-tests

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO  example.env  init.sh
.github/workflows/: account-analysis.yml  account-faucet.yml  alphanet_openzeppelin_test.yml  axon-devnet.yml  axon-tests.yml  batch-deposit-withdraw.yml  batch-prepare.yml  batch-transactions.yml  betanet_v1.1.yml  contract-test.yml  deposit_and_withdraw.yml  fee-test.yml  gasless-test.yml  godwoken-tests.yml  integration-test-chat-bot-v1.yml  integration-test-v1-trigger.yml  integration-test.yml  regression-contract-test.yml  reusable-integration-test-v0.yml  reusable-integration-test-v1.yml  reusable-integration-test.yml  rust.yml  scripts-test.yml  sync_to_tip.py  sync_to_tip.yml  sync_to_tip_event_input.json  test.yml  testnet.yml  testnet_v1.1.yml  testnet_v1.yml  web3-api-method-test.yml
configs/: godwoken-config.toml  gw-testnet-config.toml  lumos-config-example.json  lumos-config.json  scripts-deploy-result-example.json  scripts-deploy-result.json
contracts/: .gitignore  Readme.md  hardhat.config.js  package-lock.json  package.json
contracts/config/: mainnet-contracts.json
contracts/contracts/: AddressContract.sol  BlockInfo.sol  Bn256.sol  Calc.sol  CallContract.sol  CallTest.sol  ERC721MSHKUUPSToken.sol  ERC721MSHKUUPSTokenUpgrade.sol  ErrorHandling.sol  (+20 more)
docs/: block-interval.md  public-nodes.md  v0-deprecated.md
scripts/: fetch-tip-block-number.js  helper.js  regen-gw-schema.sh
src/: lib.rs  main.rs  types.rs  worker.rs
tests/: .gitignore  Cargo.toml  init.sh
(+164 files in other folders)
