[package]
name = "godwoken-tests"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
clap = { version = "2" }
crossbeam-channel = "0.5"
parking_lot = "0.11"
log = "0.4.14"
env_logger = "0.8.3"
# an excellent crate for displaying useful and pretty errors
anyhow = "1.0"

# lazy_static = "1.4.0"


# # home directories vary depending on the user's operating system
# home = "0.5"

# # The Rust community recommends the serde crate for handling most serialization and deserialization of Rust data structures efficiently and generically
# serde_json = "1.0"

# [dependencies.serde]
# version = "1.0"
# features = ["derive"] # we only need the derive feature.
